tests/ui/privacy/issue-111220-2-tuple-struct-fields-projection.stderr
error: hi
  --> $DIR/issue-111220-2-tuple-struct-fields-projection.rs:22:1
   |
LL | trait Trait<T> {
   | -------------- built-in `dyn Trait<_>` implementation for this trait
...
LL | impl<T: Id> Trait<T> for <T as Id>::Assoc {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error[E0603]: tuple struct constructor `A` is private
  --> $DIR/issue-111220-2-tuple-struct-fields-projection.rs:27:13
   |
LL |         let Self(a) = self;
   |             ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
